--- a/public/css/mycss.css
+++ b/public/css/mycss.css
@@ -11,3 +11,32 @@
 .add_box_shadow {
   box-shadow: 5px 5px 30px -10px #888888;
 }
+
+.lora-text {
+  font-family: 'Lora', serif;
+  font-size: 110%;
+}
+
+.crimson-text {
+  font-family: 'Crimson Text', serif;
+  font-size: 110%;
+}
+
+.garamond-text {
+  font-family: 'Cormorant Garamond', serif;
+  font-size: 110%;
+}
+
+.arima-text {
+  font-family: 'Arima Madurai', cursive;
+  font-size: 110%;
+}
+
+.pompiere-text {
+  font-family: 'Pompiere', cursive;
+  font-size: 110%;
+}
+
+.code-snippet {
+  font-family: 'Courier New', courier, serif;
+}
