--- a/public/css/mycss.css
+++ b/public/css/mycss.css
@@ -21,7 +21,12 @@ body {
 }
 
 .card {
-  border-color: #999999;
+  border-color: #CCC;
+  border-radius: 0;
+}
+
+.card-header:first-child {
+  border-radius: 0;
 }
 
 .post-quotation {
